[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Theme/InsetMenu.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/Options/KeyConfig.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Font/MomoNoSpacing.tres" type="DynamicFont" id=8]

[node name="KeyConfig" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -576, -72 )
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
buttons = NodePath("Margin/VBox/Scroll/VBox")
focus = NodePath("Margin/VBox/Scroll/VBox/jump/Button")

[node name="Panel" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 270.0

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox"]
margin_right = 464.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Normal Controls:"

[node name="Scroll" type="ScrollContainer" parent="Margin/VBox"]
margin_top = 18.0
margin_right = 464.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Scroll"]
margin_right = 173.0
margin_bottom = 304.0
custom_constants/separation = 4

[node name="jump" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_right = 173.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/jump"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/jump"]
margin_left = 16.0
margin_top = 6.0
margin_right = 124.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Jump / Menu Accept"

[node name="fire_manual" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 28.0
margin_right = 173.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/fire_manual"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/fire_manual"]
margin_left = 16.0
margin_top = 6.0
margin_right = 153.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Manual Fire / Menu Cancel"

[node name="fire_automatic" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 56.0
margin_right = 173.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/fire_automatic"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/fire_automatic"]
margin_left = 16.0
margin_top = 6.0
margin_right = 173.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Automatic Fire / Direction Lock"

[node name="move_left" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 84.0
margin_right = 173.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/move_left"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/move_left"]
margin_left = 16.0
margin_top = 6.0
margin_right = 68.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Move Left"

[node name="move_right" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 112.0
margin_right = 173.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/move_right"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/move_right"]
margin_left = 16.0
margin_top = 6.0
margin_right = 73.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Move Right"

[node name="look_up" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 140.0
margin_right = 173.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/look_up"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/look_up"]
margin_left = 16.0
margin_top = 6.0
margin_right = 56.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Look Up"

[node name="look_down" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 168.0
margin_right = 173.0
margin_bottom = 192.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/look_down"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/look_down"]
margin_left = 16.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Look Down / Inspect"

[node name="inspect" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
visible = false
margin_top = 196.0
margin_right = 173.0
margin_bottom = 220.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/inspect"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/inspect"]
margin_left = 16.0
margin_top = 6.0
margin_right = 52.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Inspect"

[node name="inventory" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 196.0
margin_right = 173.0
margin_bottom = 220.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/inventory"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/inventory"]
margin_left = 16.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Inventory"

[node name="gun_left" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 224.0
margin_right = 173.0
margin_bottom = 248.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/gun_left"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/gun_left"]
margin_left = 16.0
margin_top = 6.0
margin_right = 90.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Cycle Gun Left"

[node name="gun_right" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 252.0
margin_right = 173.0
margin_bottom = 276.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/gun_right"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/gun_right"]
margin_left = 16.0
margin_top = 6.0
margin_right = 95.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Cycle Gun Right"

[node name="pause" type="HBoxContainer" parent="Margin/VBox/Scroll/VBox"]
margin_top = 280.0
margin_right = 173.0
margin_bottom = 304.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Margin/VBox/Scroll/VBox/pause"]
margin_right = 12.0
margin_bottom = 24.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/VBox/Scroll/VBox/pause"]
margin_left = 16.0
margin_top = 6.0
margin_right = 46.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "Pause"
